--- a/cruddotnet/Views/Spendings/List.cshtml
+++ b/cruddotnet/Views/Spendings/List.cshtml
@@ -27,6 +27,11 @@
     </div>
 </form>
 
+<div class="mb-3 d-flex gap-2">
+    <a class="btn btn-danger" asp-action="ExportPdf">Export PDF</a>
+    <a class="btn btn-success" asp-action="ExportExcel">Export Excel</a>
+</div>
+
 <table class="table">
     <thead>
         <tr>
